@@ -1,4 +1,4 @@
-require ["fileinto", "vacation"];
+require ["vacation"];
 
 # Sample rule of vacation message, disabled by default.
 # rule:[Vacation]
@@ -6,11 +6,3 @@ if false # true
 {
     vacation :days 1 "I'm on vacation.";
 }
-
-# rule:[Move Spam to Junk Folder]
-if false # header :is "X-Spam-Flag" "YES"
-{
-    fileinto "Junk";
-    stop;
-}
-
